# veed-ai-watermark-checker

./: .gitignore  CODEOWNERS  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES  pyproject.toml
.github/workflows/: merge-gate.yml  merge-gatekeeper.yml
scripts/: install_videoseal.sh
tests/: test_detect.py  test_detect_chunking.py  test_device.py  test_embed.py  test_frames.py  test_heartbeat.py  test_message.py  test_perf.py  test_roundtrip.py  test_sign_cmd.py  test_sign_pipeline.py  test_verify_cmd.py
veed_videoseal/: __init__.py  __main__.py  _frames.py  _heartbeat.py  _perf.py  cli.py  constants.py  detect.py  embed.py  message.py  model.py  sign.py  video_io.py
veed_videoseal/assets/: attenuation.yaml
